# pandion-vtol

./: .gitignore  README.md  install.sh  link_libraries.sh
AtaLogger/: AtaLogger.cpp  AtaLogger.h
eagle/PandionVTOL/: eagle.epf  transition_control_arduino.b#1  transition_control_arduino.b#2  transition_control_arduino.b#3  transition_control_arduino.b#5  transition_control_arduino.b#6  transition_control_arduino.b#8  transition_control_arduino.b#9  transition_control_arduino.brd  transition_control_arduino.pro  transition_control_arduino.s#2  transition_control_arduino.s#3  transition_control_arduino.s#4  transition_control_arduino.s#5  transition_control_arduino.s#6  transition_control_arduino.s#7  transition_control_arduino.s#9  transition_control_arduino.sch  transition_control_esp32.b##  transition_control_esp32.b#1  transition_control_esp32.b#2  transition_control_esp32.b#4  transition_control_esp32.b#5  transition_control_esp32.b#6  transition_control_esp32.b#7  transition_control_esp32.pro  transition_control_esp32.s#2  transition_control_esp32.s#3  transition_control_esp32.s#4  transition_control_esp32.sch
esp-transition/: CMakeLists.txt  sdkconfig
esp-transition/main/: CMakeLists.txt  main.c
esp/esp-pandion/: CMakeLists.txt
esp/esp-pandion/components/flight_control/: CMakeLists.txt  Kconfig  axis_curve.c  flight_control.c  pandion_server_commands.c  pid_control.c  timer.c
esp/esp-pandion/components/flight_control/include/: axis_curve.h  axis_pid.h  flight_control.h
esp/esp-transition/: CMakeLists.txt
transition_control/: transition_control.ino
(+102 files in other folders)
